# vestibular-bayesseed

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: streamlit_app.py
default_modules/: README.md  bppv.json  meniere_disease.json  module_schema_draft.json  node_dictionary.json  pvp_bvp.json  sensitivity_ranges.json  stage_config.json
docs/: README.md  adding_new_disease_module.md  api_reference.md  cli_reference.md  default_modules.md  evidence_to_parameter_mapping.md  medical_disclaimer.md  node_taxonomy.md  overview.md  repository_assembly.md  sensitivity_analysis.md  softwarex_user_guide.md  streamlit_demo.md
examples/: run_examples.py  synthetic_cases.csv
paper/: README.md  cover_letter_draft.md  graphical_abstract_caption.md  highlights.md  manuscript.md  softwarex_manuscript_skeleton.md  softwarex_metadata_table.md
paper/figures/: fig1_architecture.mmd  fig2_node_taxonomy.mmd  fig3_streamlit_demo_caption.md  fig4_synthetic_case_output_plan.md  figure_plan.md
paper/supplementary/: evidence_table_description.md  repository_checklist.md  softwarex_submission_notes.md
paper/tables/: table1_software_metadata.md  table1_synthetic_case_output.md  table2_functionality.md  table3_default_modules.md
src/bayesseed/: CORE_ENGINE_README.md  __init__.py  cli.py  derived_nodes.py  exceptions.py  inference.py  logistic_cpd.py  module_loader.py  schema_validation.py  sensitivity.py  visualization.py
templates/: template_new_disease.json
tests/: README.md  conftest.py  test_cli.py  test_derived_nodes.py  test_inference_examples.py  test_logistic_cpd.py  test_module_loader.py  test_schema_validation.py  test_sensitivity.py  test_visualization.py
